# footvid

./: .gitignore  README.md  pyproject.toml
footvid/: arena.py  models.py  preprocessing.py
footvid/utils/: constants.py  env.py  images.py
logs/cnn-top2-layers-fine-tuning/: events.out.tfevents.1600863272.d3ecf2e33141.1772.0
logs/fcl-resnet-fine-tuning/: events.out.tfevents.1600814258.ab63a8260a55.101.1
logs/full-fine-tuning/: events.out.tfevents.1600886590.86611206770e.102.0
models/: test-predictions.csv
notebooks/: 00-images-integrity.ipynb  01-train-valid-split.ipynb  10-resnet.ipynb  11-model-selection.ipynb  12-gradcam.ipynb
references/: 10-resnet-google-colab.ipynb
tests/: test_footvid.py
