[tool.poetry]
name = "footvid"
version = "0.1.0"
description = "Differentiate football match TV broadcast frames between actual match scenes and cutscenes"
authors = ["mrtovsky <mrtovsky@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
python-dotenv = "^0.14.0"
torch = "^1.6.0"
torchvision = "^0.7.0"
ipykernel = "^5.3.4"
pandas = "^1.1.2"
matplotlib = "^3.3.2"
scikit-learn = "^0.23.2"
tensorboard = "^2.3.0"
tqdm = "^4.49.0"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
